--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.42.1",
-    "@types/node": "^22.14.0"
+    "@types/node": "^22.14.0",
+    "dotenv": "^16.4.7"
   }
 }
