--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,10 +30,10 @@ jobs:
       run: npm ci
 
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      run: npx playwright install --with-deps chromium
 
     - name: Run Playwright tests
-      run: npx playwright test
+      run: npx playwright test --project=mcp-chrome
 
     - name: Upload test results
       if: always()
