--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 ADMIN_USERNAME=your.email@example.com
 ADMIN_PASSWORD=your_password
 
+# User credentials
+USER_USERNAME=user.email@example.com
+USER_PASSWORD=user_password
+
 # Test data for invalid login attempts
 INVALID_PASSWORD=wrong_password123
 INVALID_EMAIL=invalid.email@example.com
