--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,6 +13,8 @@ jobs:
     env:
       ADMIN_USERNAME: ${{ secrets.ADMIN_USERNAME }}
       ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
+      USER_USERNAME: ${{ secrets.USER_USERNAME }}
+      USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
       VALID_EMAIL: ${{ secrets.VALID_EMAIL }}
       INVALID_PASSWORD: ${{ secrets.INVALID_PASSWORD }}
       INVALID_EMAIL: ${{ secrets.INVALID_EMAIL }}
@@ -30,10 +32,16 @@ jobs:
       run: npm ci
 
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps chromium
+      run: npx playwright install --with-deps
 
-    - name: Run Playwright tests
+    - name: Run Playwright tests (MCP Chrome)
       run: npx playwright test --project=mcp-chrome
+      
+    - name: Run Playwright tests (Firefox)
+      run: npx playwright test --project=firefox
+      
+    - name: Run Playwright tests (WebKit)
+      run: npx playwright test --project=webkit
 
     - name: Upload test results
       if: always()
